-feature: Allow messages to be popup notifications
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2
-feature: Upgrade ua-parser.js to version 1.0.35
-feature#5717: Add Aruba Clearpass template

1.2.28
-security#GHSA-fgc6-g8gc-wcg5: External Link Console Menu Item not Escaped
-security#GHSA-49f2-hwx9-qffr: External Link Console Menu Section not Escaped
-issue#5754: Installer replication loop for. Plugin realms
-issue#5759: Remote poller attempts to sync with other pollers during install
-issue#5768: Cacti does not properly escape Data Query indexes that include a space
-issue#5772: Login log message unification - add client IP adress
-issue#5773: Update rrd.php missing variable $okpos
-issue#5777: The Export .CSV only includes the 1st line of Notes
-issue#5780: Undefined array key "default" in file html_form.php
-issue#5782: Function file_get_contents in file link.php
-issue#5783: Cacti improperly handles connection closing leading to issues with third party connections
-issue#5785: auth_changepassword.php triggers NS_ERROR_REDIRECT_LOOP if server's default IP address is not public
-issue#5790: Cactid - Cron out of sync with poller Message
-issue#5791: Unable to filter users by user group, or the last time they logged into Cacti
-feature#5784: Provide a means by which a user can track Cacti connections and disconnects from the php error_log

1.2.27
-security#GHSA-37x7-mfjv-mm7m: Authentication Bypass when using using older password hashes
-security#GHSA-7cmj-g5qc-pj88: RCE vulnerability when importing packages
-security#GHSA-cx8g-hvq8-p2rv: RCE vulnerability when plugins include files
-security#GHSA-gj3f-p326-gh8r: SQL Injection vulnerability when using tree rules through Automation API
-security#GHSA-grj5-8fcj-34gh: XSS vulnerability when using JavaScript based messaging API
-security#GHSA-jrxg-8wh8-943x: SQL Injection vulnerability when using form templates